[gd_scene load_steps=4 format=3 uid="uid://dg1s02ppa5kod"]

[ext_resource type="Script" uid="uid://cseayhnexnwrj" path="res://scripts/laser.gd" id="1_a7dhc"]
[ext_resource type="Texture2D" uid="uid://w1eccogd2kik" path="res://assets/laserbeam.png" id="1_xmihv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7dhc"]
size = Vector2(30, 7)

[node name="Laser" type="Area2D"]
script = ExtResource("1_a7dhc")
SPEED = 200.0
RANGE = 0.05

[node name="Laser" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("1_xmihv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_a7dhc")

[node name="RangeTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RangeTimer" to="." method="_on_range_timer_timeout"]
